[package]
name = "gossip"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.80"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = {version = "1.7.0", features = ["v4", "serde"]}
