[package]
name = "gossip"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.80"
once_cell = "1.19.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "sync"]}
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
