[package]
name = "gossip"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.35", default-features = false, features = ["std", "now"] }
console-subscriber = "0.2.0"
itertools = "0.12.1"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thingbuf = "0.1.6"
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
log = "0.4"
rand = "0.8"
thiserror = "1.0"
async-trait = "0.1.80"
clap = { version = "4.5.6", features = ["derive"] }
